# Questock

./: .env.example  .gitignore  PATCH_README.md  README.md  pyproject.toml
app/: config.py  health.py  phase_slice.py
app/api/: __init__.py  main.py  routes_health.py
app/core/: __init__.py  models.py  resolver.py  status.py
app/evidence/: __init__.py  budget.py  citations.py  freshness.py  normalizer.py  policy.py
app/ingest/: __init__.py  glossary.py  reports.py
app/planning/: __init__.py  query_planner.py
app/providers/: __init__.py  base.py  disclosure.py  fake.py  market.py  news.py
app/retrieval/: __init__.py  filters.py  retriever.py
data/: glossary.json  securities.json
docs/TASK_CARDS/: B0-M0-01-03-planning.md  M1-01-core-models.md  M1-02-security-resolver.md  M1-03-provider-result-config-fake.md  M1-04-news-provider.md  M1-05-disclosure-provider.md  M1-06-report-ingest.md  M1-07-glossary-ingest.md  M1-07B-glossary-corpus.md  M1-08-health-config-phase-slice.md  M1-09-market-snapshot-gate.md  M2-01-query-planner.md  M2-02-hard-filter.md  M2-03-retrieval-baseline.md  M2-04-evidence-normalization.md  M2-05-freshness.md  M2-06-evidence-policy.md  M2-07-citation-validation.md  M2-08-context-budget.md  M2-INTEGRATION-CLOSURE.md  M3-00-langchain-integration-spike.md  M3-01-answer-schema-chat-service.md
docs/agent_handoff/: AGENT_WORKFLOW.md  EVALUATION_TAXONOMY_DRAFT.md  EXTENSION_COMPATIBILITY.md  FINANCIAL_CAPABILITY_BASELINE.md  HANDOFF_TEMPLATE.md  LLM_STACK_DECISION.md  (+11 more)
scripts/: __init__.py  m1_phase_slice.py  secret_scan.py
(+30 files in other folders)
