[project]
name = "questock"
version = "0.1.0"
description = "Evidence-grounded Korean stock RAG prototype"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

