[project]
name = "questock"
version = "0.1.0"
description = "Evidence-grounded Korean stock RAG prototype"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "langchain-core==1.5.1",
    "litellm==1.83.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
